--- a/notebooks/Exploratory.ipynb
+++ b/notebooks/Exploratory.ipynb
@@ -81,7 +81,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "df = pd.read_csv(\"police_logs_parsed_EXACT.csv\")\n",
+        "df = pd.read_csv(\"data/police_logs_parsed_EXACT.csv\")\n",
         "\n",
         "df.head()\n",
         "df.info()"
@@ -2417,17 +2417,17 @@
     {
       "cell_type": "code",
       "source": [
-        "df_clean = pd.read_csv(\"df_clean_zones.csv\")\n",
+        "df_clean = pd.read_csv(\"data/df_clean_zones.csv\")\n",
         "\n",
         "df_clean.head()\n",
         "df_clean.info()"
       ],
       "metadata": {
-        "id": "nm-GvDxVj4RP",
-        "outputId": "47db6331-4482-4b27-fba7-594c00bf3e47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nm-GvDxVj4RP",
+        "outputId": "47db6331-4482-4b27-fba7-594c00bf3e47"
       },
       "execution_count": 39,
       "outputs": [
@@ -2475,12 +2475,12 @@
         "filtered.head()"
       ],
       "metadata": {
-        "id": "AHClDvtDlgaF",
-        "outputId": "213db53f-4958-4d1c-9d48-90df7487c606",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
-        }
+        },
+        "id": "AHClDvtDlgaF",
+        "outputId": "213db53f-4958-4d1c-9d48-90df7487c606"
       },
       "execution_count": 38,
       "outputs": [
